--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class=" flex  px-4 sm:px-10 md:px-16 lg:px-40   justify-between items-center pt-3">
         <div class="left flex gap-6  items-center">
-            <img src="/images/logo.svg" alt="" />
+            <img src="./images/logo.svg" alt="" />
             <span class="font-semibold"> Landwind </span>
         </div>
 
@@ -76,7 +76,7 @@
                 <div class="">
                     <a class="border-gray-100  flex justify-center items-center border-[1px] rounded-md  px-4 py-2 hover:bg-gray-100 "
                         href="https://github.com/themesberg/landwind"><img class="w-4 h-4 mr-2 inline"
-                            src="/images/download.png" alt="">View on Git Hub</a>
+                            src="./images/download.png" alt="">View on Git Hub</a>
                 </div>
                 <div class="">
 
@@ -125,7 +125,7 @@
 
         </div>
         <div class="right hidden lg:block flex items-center">
-            <img class=" " src="/images/hero-removebg-preview.png" alt="">
+            <img class=" " src="./images/hero-removebg-preview.png" alt="">
         </div>
     </div>
     <!-- section close  -->
@@ -323,12 +323,12 @@
 
             <!-- L2-------------DIV--------------CLOSE -->
             <div class="L-3-div flex">
-                <img src="/images/feature-2-removebg-preview.png" alt="">
+                <img src="./images/feature-2-removebg-preview.png" alt="">
             </div>
         </div>
         <div class="right2div">
             <div class="R-1-div  hidden lg:block">
-                <img src="/images/features333.png" alt="">
+                <img src="./images/features333.png" alt="">
             </div>
             <div class="R-2-div">
                 <h1 class=" text-2xl font-extrabold ">We invest in the world’s potential</h1>
@@ -984,7 +984,7 @@
             <div class="text-center pb-20 sm:pl-10 md:pl-10 lg:pr-28">
                 <a href="#"
                     class="flex items-center justify-center mb-5 text-2xl font-semibold text-gray-900 dark:text-white">
-                    <img src="/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Landwind Logo">
+                    <img src="./images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Landwind Logo">
                     Landwind
                 </a>
                 <span class="block text-sm text-center text-gray-500 dark:text-gray-400">© 2021-2022 Landwind™. All
